crates/core/src/html/snapshots/epub_tailor_core__html__lists__tests__decimal_list_snapshot.snap
---
source: crates/core/src/html/lists.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml"><head><title>T</title></head><body><p class="et-ol-item">1. one</p><p class="et-ol-item">2. two</p></body></html>
