crates/core/src/html/snapshots/epub_tailor_core__html__lists__tests__start_and_type_and_value_snapshot.snap
---
source: crates/core/src/html/lists.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml"><head><title>T</title></head><body><p class="et-ol-item">c. c</p><p class="et-ol-item">j. j</p><p class="et-ol-item">k. k</p></body></html>
